--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </section>
       <section id="benefits" class="sec-padding">
-        <h3 class="section-heading">BENEFITS</h3>
+        <h3 class="section-heading">MAKING PROCESS</h3>
         <div class="sec-content-div flexible">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/mQU_LMrf0Os?si=q-KM3lZUhtBerX0t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
